# fluxspace-testbed

./: .gitignore  GITHUB_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: PROJECT_OVERVIEW.md  USAGE_GUIDE.md
scripts/: run_demo_open_loop.py  run_demo_waypoints.py
src/fluxspace_sim/: __init__.py  config.py
src/fluxspace_sim/drone/: __init__.py  controller.py  dynamics.py  state.py
src/fluxspace_sim/sensors/: __init__.py  lidar2d.py
src/fluxspace_sim/sim/: __init__.py  logger.py  simulator.py
src/fluxspace_sim/viz/: __init__.py  animate.py  plot.py
src/fluxspace_sim/world/: __init__.py  geometry.py  obstacles.py  world.py
tests/: __init__.py  test_collision.py  test_dynamics.py  test_lidar.py
